tests/golden/type_errors/generic_lambda_duplicate_type_parameter.cd
let duplicate = fun<T, T>(value: T): T { return value; };
