tests/golden/type_errors/generic_lambda_duplicate_type_parameter.err
Type error at 1:24: duplicate type parameter `T`
  let duplicate = fun<T, T>(value: T): T { return value; };
                         ^
